# smart_ptr_simply_implement

./: CMakeLists.txt  CMakeUserPresets.json  Readme.md
include/: Shared_ptr.h  Shared_ptr_OOP.h  Unique_ptr.h  gemini_ptr.h
src/: main.cpp
test/: test.cpp
